--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
+      <p style="color:red">テスト中</p>
       <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
       <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
       <div class="btn-wrapper">
